[package]
name = "deno_cargo_binding"
version = "0.1.0"
authors = ["The deno authors"]
edition = "2018"

[lib]
path = "lib.rs"
crate-type = ["dylib"]

[dependencies]
deno = { path = "../../../deno/core" }

cargo = "0.35.0"
futures = "0.1.27"
serde_json = "1.0.39"
serde = { version = "1.0", features = ["derive"] }
